# LabProject

./: .gitignore  fragment1.ml  fragment2.ml  fragment3.ml
MiniFun_interpreter/: MiniFun_interpreter.opam  dune-project
MiniFun_interpreter/lib/: Ast.ml  Interpreter.ml  dune  lexer.mll  parser.mly  semantics.ml  semantics.mli
MiniFun_interpreter/test/: bad_program.minifun  dune  program1.minifun  program10.miniimp  program2.miniimp  program4.minifun  program5.miniimp  program6.miniimp  program7.miniimp  program9.miniimp
MiniImp_Compiler/: compile.sh  dune-project  output.risc
MiniImp_Compiler/lib/: Ast.ml  ControlFlowGraph.ml  DefinedVars.ml  GenerateCode.ml  Liveness.ml  MiniRiscAst.ml  MiniRiscCfg.ml  Optimizer.ml  RegisterAllocation.ml  dune  parser.mly
MiniImp_Compiler/test/: dune  test1.miniimp  test10.miniimp  test2.miniimp  test3.miniimp  test4.miniimp  test5.miniimp  test6.miniimp  test7.miniimp  test8.miniimp  test9.miniimp
MiniImp_interpreter/: MiniImp_interpreter.opam  dune-project
MiniImp_interpreter/lib/: parser.mly  semantics.ml  semantics.mli
MiniImp_interpreter/test/: dune  fibonacci.miniimp  test1.miniimp  test10.miniimp  test11.miniimp  test12.miniimp  test13.miniimp  test14.miniimp  test15.miniimp  test2.miniimp  test3.miniimp  test4.miniimp  test5.miniimp  test6.miniimp  test7.miniimp  test8.miniimp  test9.miniimp
MiniTyFun_interpreter/: dune-project
MiniTyFun_interpreter/lib/: Ast.ml  Interpreter.ml  TypeChecker.ml  dune
MiniTyFun_interpreter/test/: dune
